ensure editor diagnostics are wrapped
Closes #2323.

--- a/src/gwt/src/org/rstudio/core/client/theme/res/themeStyles.css
+++ b/src/gwt/src/org/rstudio/core/client/theme/res/themeStyles.css
@@ -2,7 +2,7 @@
 @eval fixedWidthFont org.rstudio.core.client.theme.ThemeFonts.getFixedWidthFont();
 
 @external fixedWidthFont;
-@external ace_editor, ace_text-layer, ace_gutter, ace_gutter-layer, ace_gutter-cell, ace_info;
+@external ace_editor, ace_text-layer, ace_gutter, ace_gutter-layer, ace_gutter-cell, ace_info, ace_tooltip;
 @external ace_info, ace_warning, ace_error;
 @external ace_breakpoint, ace_inactive-breakpoint, ace_pending-breakpoint, ace_executing-line;
 @external ace_chunk-queued-line, ace_chunk-executed-line, ace_chunk-resting-line, ace_chunk-error-line;
@@ -315,6 +315,13 @@ pre {
 
 .ace_editor, .ace_text-layer {
   font-family: fixedWidthFont !important;
+}
+
+.ace_tooltip {
+	max-width: 400px;
+	max-height: 300px;
+	overflow: hidden;
+	white-space: pre-wrap;
 }
 
 .ace_breakpoint,
